added a seperate quiz page

--- a/aboutindex.html
+++ b/aboutindex.html
@@ -11,6 +11,11 @@
 
         <nav>
             <a href='plant-photos.html' target='_blank'>Plant Pictures</a>
+
+            <a href='cat-pictures.html' target='_blank'>Cat Pictures</a>
+
+            <a href='quiz.html' target='_blank'>About Me Quiz</a>
+            
         </nav>
 
         <p class='b'> One of my favorite past times is photography! I started taking photos when i
@@ -51,6 +56,6 @@
             </ul>
 
         </body>
-        <script type='text/javascript' src= app.js></script>
+        
 
     </html>
