--- a/plant-photos.html
+++ b/plant-photos.html
@@ -16,7 +16,7 @@
 
                     <a href='cat-pictures.html'>Cat Pictures</a>
 
-                    <a href='quiz.html'>About Me Quiz</a>
+                    <a target='_blank' href='quiz.html'>About Me Quiz</a>
                 </nav>
 
                 <a target='_blank' href='profesh-images/1plant.jpg'>
