--- a/cat-pictures.html
+++ b/cat-pictures.html
@@ -13,6 +13,8 @@
                 <a href='plant-photos.html'>Plant Pictures</a>
 
                 <a href='aboutindex.html'>Home Page</a>
+                
+                <a  target='_blank' href='quiz.html'>About Me Quiz</a>
 
             </nav>
 
