--- a/cat-pictures.html
+++ b/cat-pictures.html
@@ -9,6 +9,8 @@
 
             <h1>KITTIES</h1>
 
+            <h2>Click on an individual photo to see it in a seperate window!</h2>
+
             <nav>
                 <a href='plant-photos.html'>Plant Pictures</a>
 
