--- a/plant-photos.html
+++ b/plant-photos.html
@@ -11,6 +11,8 @@
 
                 <h1>PLANTS</h1>
 
+                <h2> Click on an individual photo to see it in a seperate window!</h2>
+
                 <nav>
                     <a href='aboutindex.html'>Home Page</a>
 
