--- a/plant-photos.html
+++ b/plant-photos.html
@@ -21,27 +21,27 @@
                     <a target='_blank' href='quiz.html'>About Me Quiz</a>
                 </nav>
 
-                <a target='_blank' href='profesh-images/1plant.jpg'>
+                <a target='_blank' href='profesh-images/1plant.JPG'>
 
-                <img src='profesh-images/1plant.jpg' alt='Pretty Flower' style= 'height:300px';>
-
-                </a>
-
-                <a  target='_blank' href='profesh-images/2plant.jpg'>
-
-                <img src='profesh-images/2plant.jpg' alt='Leaves' style= 'height: 300px';>
+                <img src='profesh-images/1plant.JPG' alt='Pretty Flower' style= 'height:300px';>
 
                 </a>
 
-                <a target='_blank' href='profesh-images/3plant.jpg'>
+                <a  target='_blank' href='profesh-images/2plant.JPG'>
+
+                <img src='profesh-images/2plant.JPG' alt='Leaves' style= 'height: 300px';>
+
+                </a>
+
+                <a target='_blank' href='profesh-images/3plant.JPG'>
                 
-                <img src='profesh-images/3plant.jpg' alt='White Flower' style='height: 300px';>
+                <img src='profesh-images/3plant.JPG' alt='White Flower' style='height: 300px';>
 
             </a>
 
-            <a target='_blank' href='profesh-images/4plant.jpg'>
+            <a target='_blank' href='profesh-images/4plant.JPG'>
             
-                <img src='profesh-images/4plant.jpg' alt='Spiral Plant' style='height:300';>
+                <img src='profesh-images/4plant.JPG' alt='Spiral Plant' style='height:300';>
 
             </a>\
 
