changes to linkable files

--- a/cat-pictures.html
+++ b/cat-pictures.html
@@ -14,7 +14,7 @@
             <nav>
                 <a href='plant-photos.html'>Plant Pictures</a>
 
-                <a href='aboutindex.html'>Home Page</a>
+                <a href='index.html'>Home Page</a>
                 
                 <a  target='_blank' href='quiz.html'>About Me Quiz</a>
 
