--- a/plant-photos.html
+++ b/plant-photos.html
@@ -14,7 +14,7 @@
                 <h2> Click on an individual photo to see it in a seperate window!</h2>
 
                 <nav>
-                    <a href='aboutindex.html'>Home Page</a>
+                    <a href='index.html'>Home Page</a>
 
                     <a href='cat-pictures.html'>Cat Pictures</a>
 
