--- a/quiz.html
+++ b/quiz.html
@@ -7,7 +7,7 @@
 <h1> Thanks for playing!</h1>
 
 <nav>
-    <a href='aboutindex.html'>Home Page</a>
+    <a href='index.html'>Home Page</a>
 </nav>
 
         <script type='text/javascript' src= app.js></script>
