--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
     <html>
     <head>
         <link rel="stylesheet" href= style.css>
-        <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
+        <!-- <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet"> -->
+        <link href="https://fonts.googleapis.com/css?family=Zilla+Slab+Highlight" rel="stylesheet">
+
          <title>About Me Page</title>
     </head>
          <body>
